--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,6 @@ dependencies {
 
     implementation 'androidx.drawerlayout:drawerlayout:1.1.1'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
-
+    implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
 
 }
