Interlocked memo with other Activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,9 @@
         <activity
             android:name=".EditNoteActivity"
             android:parentActivityName=".MemoActivity" />
+        <activity
+            android:name=".AndroidExplorerActivity"
+            android:exported="false"/>
     </application>
 
 </manifest>
