--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,14 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
 
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'androidx.room:room-runtime:2.2.5'
+    annotationProcessor 'androidx.room:room-compiler:2.2.5'
+    implementation 'androidx.paging:paging-runtime:2.1.2'
+    testImplementation 'androidx.room:room-testing:2.2.5'
+    implementation('com.mikepenz:materialdrawer:7.0.0@aar') {
+        transitive = true
+    }
 }
