오류 수정 및 발표본

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
 
         <activity
             android:name=".MemoActivity"
+            android:parentActivityName=".MainActivity"
             android:exported="false"/>
 
         <activity
